# django-rest-boilerplate

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
