[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "Código inicial para django"
authors = ["Helder Cruz <hdr.cruz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.9"
djangorestframework = "^3.12.4"
Markdown = "^3.3.6"
django-filter = "^21.1"
dj-rest-auth = "^2.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
